--- a/.archive/kubernetes/jellyfin/app/helmrelease.yaml
+++ b/.archive/kubernetes/jellyfin/app/helmrelease.yaml
@@ -83,15 +83,12 @@ spec:
         enabled: true
         className: internal-nginx
         hosts:
-          - host: &host jellyfin.greyrock.casa
+          - host: jellyfin.greyrock.casa
             paths:
               - path: /
                 service:
                   name: main
                   port: http
-        tls:
-          - hosts:
-              - *host
 
     persistence:
       nfs-nas-media:
