--- a/.archive/kubernetes/kube-prometheus-stack/app/helmrelease.yaml
+++ b/.archive/kubernetes/kube-prometheus-stack/app/helmrelease.yaml
@@ -131,10 +131,7 @@ spec:
         ingressClassName: internal-nginx
         pathType: Prefix
         hosts:
-          - &host_prometheus prometheus-${CLUSTER_NAME}.greyrock.casa
-        tls:
-          - hosts:
-              - *host_prometheus
+          - prometheus-${CLUSTER_NAME}.greyrock.casa
 
       prometheusSpec:
         alertingEndpoints:
