--- a/kubernetes/main/apps/downloads/prowlarr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/prowlarr/app/helmrelease.yaml
@@ -85,15 +85,12 @@ spec:
           hajimari.io/icon: "mdi:movie-search"
         className: "internal-nginx"
         hosts:
-          - host: &hostName prowlarr.greyrock.casa
+          - host: prowlarr.greyrock.casa
             paths:
               - path: /
                 service:
                   identifier: app
                   port: http
-        tls:
-          - hosts:
-              - *hostName
 
     persistence:
       config:
