--- a/kubernetes/main/apps/media/maintainerr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/maintainerr/app/helmrelease.yaml
@@ -65,16 +65,13 @@ spec:
           hajimari.io/instance: "todd"
           hajimari.io/icon: "mdi:plex"
         hosts:
-          - host: &hostName maintainerr.greyrock.casa
+          - host: maintainerr.greyrock.casa
             paths:
               - path: /
                 pathType: Prefix
                 service:
                   identifier: app
                   port: http
-        tls:
-          - hosts:
-              - *hostName
 
     persistence:
       data:
