--- a/kubernetes/main/apps/monitoring/alertmanager/app/helmrelease.yaml
+++ b/kubernetes/main/apps/monitoring/alertmanager/app/helmrelease.yaml
@@ -71,15 +71,12 @@ spec:
           hajimari.io/instance: "todd"
           hajimari.io/icon: "mdi:plex"
         hosts:
-          - host: &host alertmanager.greyrock.casa
+          - host: alertmanager.greyrock.casa
             paths:
               - path: /
                 service:
                   identifier: app
                   port: http
-        tls:
-          - hosts:
-              - *host
 
     persistence:
       config:
