--- a/kubernetes/main/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/main/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -22,11 +22,8 @@ spec:
       dashboard:
         ingressClassName: "internal-nginx"
         host:
-          name: &host rook-main.greyrock.casa
+          name: rook-main.greyrock.casa
           path: "/"
-        tls:
-          - hosts:
-              - *host
     toolbox:
       enabled: false
     configOverride: |
