--- a/kubernetes/main/apps/selfhosted/linkding/app/helmrelease.yaml
+++ b/kubernetes/main/apps/selfhosted/linkding/app/helmrelease.yaml
@@ -73,12 +73,9 @@ spec:
           hajimari.io/instance: "todd"
           hajimari.io/icon: "mdi:plex"
         hosts:
-          - host: &hostName bookmarks.greyrock.casa
+          - host: bookmarks.greyrock.casa
             paths:
               - path: /
                 service:
                   identifier: app
                   port: http
-        tls:
-          - hosts:
-              - *hostName
