--- a/kubernetes/main/apps/selfhosted/ocis/app/helmrelease.yaml
+++ b/kubernetes/main/apps/selfhosted/ocis/app/helmrelease.yaml
@@ -103,15 +103,12 @@ spec:
           hajimari.io/instance: "todd"
           hajimari.io/icon: "mdi:plex"
         hosts:
-          - host: &hostName files.greyrock.casa
+          - host: files.greyrock.casa
             paths:
               - path: /
                 service:
                   identifier: app
                   port: http
-        tls:
-          - hosts:
-              - *hostName
 
     persistence:
       config:
