--- a/kubernetes/main/apps/selfhosted/tandoor/app/helmrelease.yaml
+++ b/kubernetes/main/apps/selfhosted/tandoor/app/helmrelease.yaml
@@ -105,15 +105,12 @@ spec:
           hajimari.io/instance: "todd"
           hajimari.io/icon: "mdi:plex"
         hosts:
-          - host: &hostName tandoor.greyrock.casa
+          - host: tandoor.greyrock.casa
             paths:
               - path: /
                 service:
                   identifier: app
                   port: http
-        tls:
-          - hosts:
-              - *hostName
 
     persistence:
       files:
