--- a/kubernetes/main/apps/selfhosted/zipline/app/helmrelease.yaml
+++ b/kubernetes/main/apps/selfhosted/zipline/app/helmrelease.yaml
@@ -109,12 +109,9 @@ spec:
           hajimari.io/instance: "todd"
           hajimari.io/icon: "mdi:plex"
         hosts:
-          - host: &host s.greyrock.casa
+          - host: s.greyrock.casa
             paths:
               - path: /
                 service:
                   identifier: app
                   port: http
-        tls:
-          - hosts:
-              - *host
