--- a/.archive/kubernetes/n8n/app/helmrelease.yaml
+++ b/.archive/kubernetes/n8n/app/helmrelease.yaml
@@ -61,12 +61,9 @@ spec:
           nginx.ingress.kubernetes.io/auth-response-headers: "x-auth-request-email, x-auth-request-groups"
           external-dns.alpha.kubernetes.io/target: ingress-ext.greyrock.casa
         hosts:
-          - host: &host "n8n.greyrock.casa"
+          - host: n8n.greyrock.casa
             paths:
               - path: /
-        tls:
-          - hosts:
-              - *host
 
     podSecurityContext:
       runAsUser: 1000
