--- a/kubernetes/main/apps/downloads/radarr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/radarr/app/helmrelease.yaml
@@ -88,15 +88,12 @@ spec:
           hajimari.io/icon: "mdi:filmstrip"
         className: "internal-nginx"
         hosts:
-          - host: &hostName radarr.greyrock.casa
+          - host: radarr.greyrock.casa
             paths:
               - path: /
                 service:
                   identifier: app
                   port: http
-        tls:
-          - hosts:
-              - *hostName
 
     persistence:
       config:
