--- a/kubernetes/main/apps/downloads/sonarr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/sonarr/app/helmrelease.yaml
@@ -88,15 +88,12 @@ spec:
           hajimari.io/icon: "mdi:television-classic"
         className: "internal-nginx"
         hosts:
-          - host: &hostName sonarr.greyrock.casa
+          - host: sonarr.greyrock.casa
             paths:
               - path: /
                 service:
                   identifier: app
                   port: http
-        tls:
-          - hosts:
-              - *hostName
 
     persistence:
       config:
