--- a/kubernetes/main/apps/media/tautulli/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/tautulli/app/helmrelease.yaml
@@ -74,16 +74,13 @@ spec:
       app:
         className: internal-nginx
         hosts:
-          - host: &hostName tautulli.greyrock.casa
+          - host: tautulli.greyrock.casa
             paths:
               - path: /
                 pathType: Prefix
                 service:
                   identifier: app
                   port: http
-        tls:
-          - hosts:
-              - *hostName
 
     persistence:
       config:
