--- a/kubernetes/main/apps/monitoring/kromgo/app/helmrelease.yaml
+++ b/kubernetes/main/apps/monitoring/kromgo/app/helmrelease.yaml
@@ -78,15 +78,12 @@ spec:
         annotations:
           external-dns.alpha.kubernetes.io/target: ingress-ext.greyrock.casa
         hosts:
-          - host: &host kromgo.greyrock.casa
+          - host: kromgo.greyrock.casa
             paths:
               - path: /
                 service:
                   identifier: app
                   port: http
-        tls:
-          - hosts:
-              - *host
 
     persistence:
       config-file:
