--- a/kubernetes/main/apps/monitoring/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/main/apps/monitoring/victoria-metrics/app/helmrelease.yaml
@@ -135,10 +135,7 @@ spec:
         enabled: true
         ingressClassName: internal-nginx
         hosts:
-          - &hostalert vmalert.greyrock.casa
-        tls:
-          - hosts:
-              - *hostalert
+          - vmalert.greyrock.casa
 
     # VM Data scraping
     vmagent:
@@ -170,10 +167,7 @@ spec:
         enabled: true
         ingressClassName: internal-nginx
         hosts:
-          - &hostagent vmagent.greyrock.casa
-        tls:
-          - hosts:
-              - *hostagent
+          - vmagent.greyrock.casa
 
     # Single-binary vm cluster alternative (liteweight, non-HA)
     vmsingle:
