--- a/kubernetes/main/apps/network/external-services/unifi.yaml
+++ b/kubernetes/main/apps/network/external-services/unifi.yaml
@@ -32,7 +32,7 @@ metadata:
 spec:
   ingressClassName: internal-nginx
   rules:
-    - host: &host unifi.greyrock.casa
+    - host: unifi.greyrock.casa
       http:
         paths:
           - path: /
@@ -42,6 +42,3 @@ spec:
                 name: unifi
                 port:
                   number: 443
-  tls:
-    - hosts:
-        - *host
