--- a/kubernetes/main/apps/selfhosted/wallabag/app/helmrelease.yaml
+++ b/kubernetes/main/apps/selfhosted/wallabag/app/helmrelease.yaml
@@ -71,12 +71,9 @@ spec:
           hajimari.io/instance: "todd"
           hajimari.io/icon: "mdi:plex"
         hosts:
-          - host: &hostName wallabag.greyrock.casa
+          - host: wallabag.greyrock.casa
             paths:
               - path: /
                 service:
                   identifier: app
                   port: http
-        tls:
-          - hosts:
-              - *hostName
