--- a/kubernetes/main/apps/network/multus/config/net-attach-iot.yaml
+++ b/kubernetes/main/apps/network/multus/config/net-attach-iot.yaml
@@ -11,7 +11,7 @@ spec:
       "plugins": [
         {
           "type": "macvlan",
-          "master": "bond0.40",
+          "master": "bond0.303",
           "mode": "bridge",
           "capabilities": {
             "ips": true
@@ -23,6 +23,10 @@ spec:
               { "dst": "10.1.3.0/24", "gw": "10.1.4.1" }
             ]
           }
+        },
+        {
+          "capabilities": { "mac": true },
+          "type": "tuning"
         }
       ]
     }
