feat(external-dns): Set ignore-ingress-tls-spec

--- a/kubernetes/main/apps/network/external-dns/external/helmrelease.yaml
+++ b/kubernetes/main/apps/network/external-dns/external/helmrelease.yaml
@@ -35,6 +35,7 @@ spec:
       - --crd-source-apiversion=externaldns.k8s.io/v1alpha1
       - --crd-source-kind=DNSEndpoint
       - --events
+      - --ignore-ingress-tls-spec
       - --ingress-class=external-nginx
 
     podAnnotations:
