--- a/kubernetes/main/apps/network/external-dns/internal/helmrelease.yaml
+++ b/kubernetes/main/apps/network/external-dns/internal/helmrelease.yaml
@@ -55,6 +55,9 @@ spec:
           initialDelaySeconds: 10
           timeoutSeconds: 5
 
+    extraArgs:
+      - --ignore-ingress-tls-spec
+
     podAnnotations:
       secret.reloader.stakater.com/reload: externaldns-internal-secrets
 
