chore(externaldns): Clean up

--- a/kubernetes/main/apps/network/external-dns/unifi/externalsecret.yaml
+++ b/kubernetes/main/apps/network/external-dns/unifi/externalsecret.yaml
@@ -3,16 +3,16 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: externaldns-internal
+  name: externaldns-unifi
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword-connect
   target:
-    name: externaldns-internal-secrets
+    name: external-dns-unifi-secret
     creationPolicy: Owner
   data:
-    - secretKey: externaldns_internal_pass
+    - secretKey: external_dns_password
       remoteRef:
         key: Unifi Controller
-        property: externaldns_internal
+        property: external_dns
