--- a/kubernetes/main/apps/network/external-dns/ks.yaml
+++ b/kubernetes/main/apps/network/external-dns/ks.yaml
@@ -3,25 +3,6 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &appname externaldns-shared
-  namespace: flux-system
-spec:
-  targetNamespace: network
-  commonMetadata:
-    labels:
-      app.kubernetes.io/name: *appname
-  interval: 10m
-  path: "./kubernetes/main/apps/network/external-dns/shared"
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: greyrock-ops-kubernetes
-  wait: true
----
-# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/kustomization-kustomize-v1.json
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
   name: &appname externaldns-external
   namespace: flux-system
 spec:
@@ -37,14 +18,13 @@ spec:
     name: greyrock-ops-kubernetes
   wait: true
   dependsOn:
-    - name: externaldns-shared
     - name: external-secrets-stores
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/kustomization-kustomize-v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &appname externaldns-internal
+  name: &appname externaldns-unifi
   namespace: flux-system
 spec:
   targetNamespace: network
@@ -52,11 +32,11 @@ spec:
     labels:
       app.kubernetes.io/name: *appname
   interval: 10m
-  path: "./kubernetes/main/apps/network/external-dns/internal"
+  path: "./kubernetes/main/apps/network/external-dns/unifi"
   prune: true
   sourceRef:
     kind: GitRepository
     name: greyrock-ops-kubernetes
-  wait: true
+  wait: false
   dependsOn:
     - name: external-secrets-stores
