--- a/kubernetes/main/apps/monitoring/victoria-metrics/app/secret-extrascrapes.yaml
+++ b/kubernetes/main/apps/monitoring/victoria-metrics/app/secret-extrascrapes.yaml
@@ -12,6 +12,7 @@ stringData:
       static_configs:
         - targets:
             - nas.greyrock.io:9100
+            - utility.greyrock.io:9100
     - job_name: smartctl-exporter
       scrape_interval: 10m
       scrape_timeout: 10s
