--- a/kubernetes/main/apps/network/smtp-relay/app/helmrelease.yaml
+++ b/kubernetes/main/apps/network/smtp-relay/app/helmrelease.yaml
@@ -77,6 +77,7 @@ spec:
         type: LoadBalancer
         annotations:
           io.cilium/lb-ipam-ips: 10.1.1.157
+          external-dns.alpha.kubernetes.io/hostname: smtp.greyrock.casa
         ports:
           http:
             primary: true
