--- a/kubernetes/main/apps/network/kustomization.yaml
+++ b/kubernetes/main/apps/network/kustomization.yaml
@@ -11,4 +11,5 @@ resources:
   - ./external-dns/ks.yaml
   - ./ingress-nginx/ks.yaml
   - ./multus/ks.yaml
+  - ./openspeedtest/ks.yaml
   - ./smtp-relay/ks.yaml
