--- a/kubernetes/main/apps/downloads/overseerr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/overseerr/app/helmrelease.yaml
@@ -51,6 +51,7 @@ spec:
           hajimari.io/enable: "true"
           hajimari.io/instance: "todd,andy"
           hajimari.io/icon: mdi:eye-circle
+          external-dns.alpha.kubernetes.io/target: ingress-int.greyrock.casa
         hosts:
           - host: ${HOSTNAME}
             paths:
