--- a/kubernetes/main/apps/downloads/prowlarr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/prowlarr/app/helmrelease.yaml
@@ -83,6 +83,7 @@ spec:
           hajimari.io/enable: "true"
           hajimari.io/instance: "todd"
           hajimari.io/icon: "mdi:movie-search"
+          external-dns.alpha.kubernetes.io/target: ingress-int.greyrock.casa
         className: "internal-nginx"
         hosts:
           - host: prowlarr.greyrock.casa
