--- a/kubernetes/main/apps/home-automation/zwave-js-ui/app/helmrelease.yaml
+++ b/kubernetes/main/apps/home-automation/zwave-js-ui/app/helmrelease.yaml
@@ -76,6 +76,7 @@ spec:
           hajimari.io/enable: "true"
           hajimari.io/instance: "todd"
           hajimari.io/icon: "mdi:z-wave"
+          external-dns.alpha.kubernetes.io/target: ingress-int.greyrock.casa
         className: internal-nginx
         hosts:
           - host: ${HOSTNAME}
