--- a/kubernetes/main/apps/home-automation/esphome/app/helmrelease.yaml
+++ b/kubernetes/main/apps/home-automation/esphome/app/helmrelease.yaml
@@ -65,6 +65,7 @@ spec:
           hajimari.io/enable: "true"
           hajimari.io/instance: "todd"
           hajimari.io/icon: "mdi:home-assistant"
+          external-dns.alpha.kubernetes.io/target: ingress-int.greyrock.casa
         hosts:
           - host: esphome.greyrock.casa
             paths:
