--- a/kubernetes/main/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/main/apps/kube-system/cilium/app/helmrelease.yaml
@@ -39,6 +39,8 @@ spec:
         ingress:
           enabled: true
           className: "internal-nginx"
+          annotations:
+            external-dns.alpha.kubernetes.io/target: ingress-int.greyrock.casa
           hosts:
             - hubble-main.greyrock.casa
 
