--- a/kubernetes/main/apps/media/maintainerr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/maintainerr/app/helmrelease.yaml
@@ -64,6 +64,7 @@ spec:
           hajimari.io/enable: "true"
           hajimari.io/instance: "todd"
           hajimari.io/icon: "mdi:plex"
+          external-dns.alpha.kubernetes.io/target: ingress-int.greyrock.casa
         hosts:
           - host: maintainerr.greyrock.casa
             paths:
