--- a/kubernetes/main/apps/media/tautulli/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/tautulli/app/helmrelease.yaml
@@ -73,6 +73,8 @@ spec:
     ingress:
       app:
         className: internal-nginx
+        annotations:
+          external-dns.alpha.kubernetes.io/target: ingress-int.greyrock.casa
         hosts:
           - host: tautulli.greyrock.casa
             paths:
