--- a/kubernetes/main/apps/monitoring/alertmanager/app/helmrelease.yaml
+++ b/kubernetes/main/apps/monitoring/alertmanager/app/helmrelease.yaml
@@ -70,6 +70,7 @@ spec:
           hajimari.io/enable: "true"
           hajimari.io/instance: "todd"
           hajimari.io/icon: "mdi:plex"
+          external-dns.alpha.kubernetes.io/target: ingress-int.greyrock.casa
         hosts:
           - host: alertmanager.greyrock.casa
             paths:
