--- a/kubernetes/main/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/main/apps/monitoring/grafana/app/helmrelease.yaml
@@ -350,6 +350,7 @@ spec:
         hajimari.io/enable: "true"
         hajimari.io/instance: "todd"
         hajimari.io/icon: "mdi:plex"
+        external-dns.alpha.kubernetes.io/target: ingress-int.greyrock.casa
       hosts:
         - grafana.greyrock.casa
 
