--- a/kubernetes/main/apps/network/openspeedtest/app/helmrelease.yaml
+++ b/kubernetes/main/apps/network/openspeedtest/app/helmrelease.yaml
@@ -56,6 +56,8 @@ spec:
     ingress:
       app:
         className: "internal-nginx"
+        annotations:
+          external-dns.alpha.kubernetes.io/target: ingress-int.greyrock.casa
         hosts:
           - host: openspeedtest.greyrock.casa
             paths:
