--- a/kubernetes/main/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/main/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -21,6 +21,8 @@ spec:
     ingress:
       dashboard:
         ingressClassName: "internal-nginx"
+        annotations:
+          external-dns.alpha.kubernetes.io/target: ingress-int.greyrock.casa
         host:
           name: rook-main.greyrock.casa
           path: "/"
