--- a/kubernetes/main/apps/selfhosted/actual/app/helmrelease.yaml
+++ b/kubernetes/main/apps/selfhosted/actual/app/helmrelease.yaml
@@ -65,6 +65,7 @@ spec:
           hajimari.io/enable: "true"
           hajimari.io/instance: "todd"
           hajimari.io/icon: "mdi:plex"
+          external-dns.alpha.kubernetes.io/target: ingress-int.greyrock.casa
         hosts:
           - host: actual.greyrock.casa
             paths:
