--- a/kubernetes/main/apps/selfhosted/maker-management-platform/app/helmrelease.yaml
+++ b/kubernetes/main/apps/selfhosted/maker-management-platform/app/helmrelease.yaml
@@ -82,6 +82,7 @@ spec:
           hajimari.io/enable: "true"
           hajimari.io/instance: "todd"
           hajimari.io/icon: "mdi:plex"
+          external-dns.alpha.kubernetes.io/target: ingress-int.greyrock.casa
         hosts:
           - host: mmp.greyrock.casa
             paths:
