--- a/kubernetes/main/apps/selfhosted/ocis/app/helmrelease.yaml
+++ b/kubernetes/main/apps/selfhosted/ocis/app/helmrelease.yaml
@@ -102,6 +102,7 @@ spec:
           hajimari.io/enable: "true"
           hajimari.io/instance: "todd"
           hajimari.io/icon: "mdi:plex"
+          external-dns.alpha.kubernetes.io/target: ingress-int.greyrock.casa
         hosts:
           - host: files.greyrock.casa
             paths:
