--- a/kubernetes/main/apps/selfhosted/paperless/app/helmrelease.yaml
+++ b/kubernetes/main/apps/selfhosted/paperless/app/helmrelease.yaml
@@ -110,6 +110,7 @@ spec:
           hajimari.io/enable: "true"
           hajimari.io/instance: "todd"
           hajimari.io/icon: "mdi:plex"
+          external-dns.alpha.kubernetes.io/target: ingress-int.greyrock.casa
         hosts:
           - host: paperless.greyrock.casa
             paths:
