--- a/kubernetes/main/apps/downloads/autobrr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/autobrr/app/helmrelease.yaml
@@ -75,7 +75,7 @@ spec:
 
     ingress:
       app:
-        className:
+        className: internal-nginx
         annotations:
           external-dns.alpha.kubernetes.io/target: ingress-int.greyrock.casa
         hosts:
