--- a/kubernetes/main/apps/selfhosted/hajimari-todd/app/helmrelease.yaml
+++ b/kubernetes/main/apps/selfhosted/hajimari-todd/app/helmrelease.yaml
@@ -81,6 +81,8 @@ spec:
       main:
         enabled: true
         ingressClassName: internal-nginx
+        annotations:
+          external-dns.alpha.kubernetes.io/target: ingress-int.greyrock.casa
         hosts:
           - host: home-todd.greyrock.casa
             paths:
