--- a/kubernetes/main/apps/kube-system/cilium/app/values.yaml
+++ b/kubernetes/main/apps/kube-system/cilium/app/values.yaml
@@ -15,6 +15,7 @@ cluster:
   name: main
 cni:
   exclusive: false
+devices: bond+
 enableRuntimeDeviceDetection: true
 endpointRoutes:
   enabled: true
