chore(hajimari): Update icons

--- a/kubernetes/main/apps/monitoring/alertmanager/app/helmrelease.yaml
+++ b/kubernetes/main/apps/monitoring/alertmanager/app/helmrelease.yaml
@@ -69,7 +69,7 @@ spec:
         annotations:
           hajimari.io/enable: "true"
           hajimari.io/instance: "todd"
-          hajimari.io/icon: "mdi:plex"
+          hajimari.io/icon: "mdi:alert-box"
           external-dns.alpha.kubernetes.io/target: ingress-int.greyrock.casa
         hosts:
           - host: alertmanager.greyrock.casa
