--- a/kubernetes/main/apps/selfhosted/actual/app/helmrelease.yaml
+++ b/kubernetes/main/apps/selfhosted/actual/app/helmrelease.yaml
@@ -64,7 +64,7 @@ spec:
         annotations:
           hajimari.io/enable: "true"
           hajimari.io/instance: "todd"
-          hajimari.io/icon: "mdi:plex"
+          hajimari.io/icon: "mdi:currency-usd"
           external-dns.alpha.kubernetes.io/target: ingress-int.greyrock.casa
         hosts:
           - host: actual.greyrock.casa
