--- a/kubernetes/main/apps/selfhosted/thelounge/app/helmrelease.yaml
+++ b/kubernetes/main/apps/selfhosted/thelounge/app/helmrelease.yaml
@@ -70,7 +70,7 @@ spec:
         annotations:
           hajimari.io/enable: "true"
           hajimari.io/instance: "todd"
-          hajimari.io/icon: "mdi:plex"
+          hajimari.io/icon: "mdi:chat"
           external-dns.alpha.kubernetes.io/target: ingress-int.greyrock.casa
         hosts:
           - host: thelounge.greyrock.casa
