--- a/kubernetes/main/apps/media/maintainerr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/maintainerr/app/helmrelease.yaml
@@ -63,7 +63,7 @@ spec:
         annotations:
           hajimari.io/enable: "true"
           hajimari.io/instance: "todd"
-          hajimari.io/icon: "mdi:plex"
+          hajimari.io/icon: "mdi:wrench"
           external-dns.alpha.kubernetes.io/target: ingress-int.greyrock.casa
         hosts:
           - host: maintainerr.greyrock.casa
