--- a/kubernetes/main/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/main/apps/monitoring/grafana/app/helmrelease.yaml
@@ -349,7 +349,7 @@ spec:
       annotations:
         hajimari.io/enable: "true"
         hajimari.io/instance: "todd"
-        hajimari.io/icon: "mdi:plex"
+        hajimari.io/icon: "simple-icons:grafana"
         external-dns.alpha.kubernetes.io/target: ingress-int.greyrock.casa
       hosts:
         - grafana.greyrock.casa
