--- a/kubernetes/main/apps/security/lldap/app/helmrelease.yaml
+++ b/kubernetes/main/apps/security/lldap/app/helmrelease.yaml
@@ -101,7 +101,7 @@ spec:
         annotations:
           hajimari.io/enable: "true"
           hajimari.io/instance: "todd"
-          hajimari.io/icon: "mdi:plex"
+          hajimari.io/icon: "fa:folder-tree"
           external-dns.alpha.kubernetes.io/target: ingress-int.greyrock.casa
         hosts:
           - host: lldap.greyrock.casa
