--- a/kubernetes/main/apps/selfhosted/ocis/app/helmrelease.yaml
+++ b/kubernetes/main/apps/selfhosted/ocis/app/helmrelease.yaml
@@ -101,7 +101,7 @@ spec:
         annotations:
           hajimari.io/enable: "true"
           hajimari.io/instance: "todd"
-          hajimari.io/icon: "mdi:plex"
+          hajimari.io/icon: "simple-icons:nextcloud"
           external-dns.alpha.kubernetes.io/target: ingress-int.greyrock.casa
         hosts:
           - host: files.greyrock.casa
