--- a/kubernetes/main/apps/selfhosted/paperless/app/helmrelease.yaml
+++ b/kubernetes/main/apps/selfhosted/paperless/app/helmrelease.yaml
@@ -109,7 +109,7 @@ spec:
         annotations:
           hajimari.io/enable: "true"
           hajimari.io/instance: "todd"
-          hajimari.io/icon: "mdi:plex"
+          hajimari.io/icon: "simple-icons:paperlessngx"
           external-dns.alpha.kubernetes.io/target: ingress-int.greyrock.casa
         hosts:
           - host: paperless.greyrock.casa
