--- a/kubernetes/main/apps/selfhosted/tandoor/app/helmrelease.yaml
+++ b/kubernetes/main/apps/selfhosted/tandoor/app/helmrelease.yaml
@@ -103,7 +103,7 @@ spec:
           external-dns.alpha.kubernetes.io/target: ingress-ext.greyrock.casa
           hajimari.io/enable: "true"
           hajimari.io/instance: "todd"
-          hajimari.io/icon: "mdi:plex"
+          hajimari.io/icon: "fa:list"
         hosts:
           - host: tandoor.greyrock.casa
             paths:
