--- a/kubernetes/main/apps/selfhosted/wallabag/app/helmrelease.yaml
+++ b/kubernetes/main/apps/selfhosted/wallabag/app/helmrelease.yaml
@@ -69,7 +69,7 @@ spec:
           external-dns.alpha.kubernetes.io/target: ingress-ext.greyrock.casa
           hajimari.io/enable: "true"
           hajimari.io/instance: "todd"
-          hajimari.io/icon: "mdi:plex"
+          hajimari.io/icon: "simple-icons:wallabag"
         hosts:
           - host: wallabag.greyrock.casa
             paths:
