feat(tautulli): Add to hajimari

--- a/kubernetes/main/apps/media/tautulli/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/tautulli/app/helmrelease.yaml
@@ -75,6 +75,9 @@ spec:
         className: internal-nginx
         annotations:
           external-dns.alpha.kubernetes.io/target: ingress-int.greyrock.casa
+          hajimari.io/enable: "true"
+          hajimari.io/instance: "todd"
+          hajimari.io/icon: "mdi:plex"
         hosts:
           - host: tautulli.greyrock.casa
             paths:
