--- a/kubernetes/main/apps/network/cloudflared/app/helmrelease.yaml
+++ b/kubernetes/main/apps/network/cloudflared/app/helmrelease.yaml
@@ -49,9 +49,7 @@ spec:
               NO_AUTOUPDATE: "true"
               TUNNEL_CRED_FILE: /etc/cloudflared/creds/credentials.json
               TUNNEL_METRICS: 0.0.0.0:8080
-              TUNNEL_ORIGIN_ENABLE_HTTP2: true
-              TUNNEL_POST_QUANTUM: true
-              TUNNEL_TRANSPORT_PROTOCOL: quic
+              TUNNEL_TRANSPORT_PROTOCOL: auto
               TUNNEL_ID:
                 valueFrom:
                   secretKeyRef:
