--- a/kubernetes/main/apps/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/main/apps/monitoring/loki/app/helmrelease.yaml
@@ -122,7 +122,7 @@ spec:
             paths:
               - path: /
                 pathType: Prefix
-
+        tls: []
     write:
       replicas: 2
       persistence:
