--- a/kubernetes/main/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/main/apps/monitoring/grafana/app/helmrelease.yaml
@@ -135,10 +135,8 @@ spec:
           gnetId: 21356
           revision: 2
           datasource:
-            - name: DS_PROMETHEUS
-              value: Prometheus
-            - name: VAR_REPLICATIONDESTNAME
-              value: '.*-bootstrap'
+            - { name: DS_PROMETHEUS, value: Prometheus }
+            - { name: VAR_REPLICATIONDESTNAME, value: '.*-bootstrap'}
 
         zfs:
           # renovate: dashboardName="ZFS"
@@ -291,7 +289,7 @@ spec:
           - access: proxy
             name: Prometheus
             type: prometheus
-            url: http://vmsingle-victoria-metrics.monitoring.svc.cluster.local:8429
+            url: http://vmselect-victoria-metrics.monitoring.svc.cluster.local:8481/select/0/prometheus
             isDefault: true
             jsonData:
               prometheusType: Prometheus
