--- a/kubernetes/main/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/main/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -40,7 +40,7 @@ spec:
         enabled: true
         urlPrefix: /
         ssl: false
-        prometheusEndpoint: http://vmsingle-victoria-metrics.monitoring.svc.cluster.local:8429
+        prometheusEndpoint: http://vmselect-victoria-metrics.monitoring.svc.cluster.local:8481/select/0/prometheus
       mgr:
         modules:
           - name: pg_autoscaler
