--- a/kubernetes/main/apps/monitoring/kustomization.yaml
+++ b/kubernetes/main/apps/monitoring/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   # Flux-Kustomizations
   - ./alertmanager/ks.yaml
   - ./blackbox-exporter/ks.yaml
+  - ./fluent-bit/ks.yaml
   - ./grafana/ks.yaml
   - ./hs110-exporter-rack/ks.yaml
   - ./kromgo/ks.yaml
