--- a/kubernetes/main/apps/downloads/autoscan/ks.yaml
+++ b/kubernetes/main/apps/downloads/autoscan/ks.yaml
@@ -20,7 +20,7 @@ spec:
   dependsOn:
     - name: rook-ceph-cluster
     - name: volsync
-    - name: plex
+    # - name: plex
     - name: sonarr
   postBuild:
     substitute:
