--- a/kubernetes/main/apps/media/tautulli/ks.yaml
+++ b/kubernetes/main/apps/media/tautulli/ks.yaml
@@ -21,7 +21,7 @@ spec:
     - name: rook-ceph-cluster
     - name: volsync
     - name: external-secrets-stores
-    - name: plex
+    # - name: plex
   postBuild:
     substitute:
       APP: *appname
