feat(tautulli)!: Disable

--- a/kubernetes/main/apps/media/kustomization.yaml
+++ b/kubernetes/main/apps/media/kustomization.yaml
@@ -9,4 +9,4 @@ resources:
   # Flux-Kustomizations
   - ./maintainerr/ks.yaml
   # - ./plex/ks.yaml
-  - ./tautulli/ks.yaml
+  # - ./tautulli/ks.yaml
