feat(maintainerr)!: Disable

--- a/kubernetes/main/apps/media/kustomization.yaml
+++ b/kubernetes/main/apps/media/kustomization.yaml
@@ -7,6 +7,6 @@ resources:
   - ./namespace.yaml
 
   # Flux-Kustomizations
-  - ./maintainerr/ks.yaml
+  # - ./maintainerr/ks.yaml
   # - ./plex/ks.yaml
   # - ./tautulli/ks.yaml
