--- a/kubernetes/main/apps/downloads/kustomization.yaml
+++ b/kubernetes/main/apps/downloads/kustomization.yaml
@@ -7,13 +7,13 @@ resources:
   - ./namespace.yaml
 
   # Flux-Kustomizations
-  - ./autobrr/ks.yaml
-  - ./autoscan/ks.yaml
+  # - ./autobrr/ks.yaml
+  # - ./autoscan/ks.yaml
   # - ./cross-seed/ks.yaml
-  - ./overseerr/ks.yaml
+  # - ./overseerr/ks.yaml
   # - ./prowlarr/ks.yaml
-  - ./qbittorrent/ks.yaml
+  # - ./qbittorrent/ks.yaml
   # - ./radarr/ks.yaml
   - ./recyclarr/ks.yaml
-  - ./sabnzbd/ks.yaml
+  # - ./sabnzbd/ks.yaml
   # - ./sonarr/ks.yaml
