--- a/kubernetes/main/apps/home-automation/kustomization.yaml
+++ b/kubernetes/main/apps/home-automation/kustomization.yaml
@@ -11,6 +11,6 @@ resources:
   - ./esphome/ks.yaml
   - ./home-assistant/ks.yaml
   - ./mosquitto/ks.yaml
-  - ./scrypted/ks.yaml
+  # - ./scrypted/ks.yaml
   - ./zigbee2mqtt/ks.yaml
   - ./zwave-js-ui/ks.yaml
